@@ -32,6 +32,10 @@ add the script to the commands to be executed
 .IP
 add the contents of script-file to the commands to be executed
 .HP
+\fB\-\-follow\-symlinks\fR
+.IP
+follow symlinks when processing in place
+.HP
 \fB\-i[SUFFIX]\fR, \fB\-\-in\-place\fR[=\fISUFFIX\fR]
 .IP
 edit files in place (makes backup if extension supplied)
